--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "coffee-script": "1.6.3",
     "connect-multiparty": "^1.2.5",
     "express": "3.18.1",
-    "log": "1.4.0",
+    "log": "git+https://github.com/steakknife/log.js#no-timestamp",
     "optparse": "1.0.4",
     "scoped-http-client": "0.11.0"
   },
